CDTI_F1_DDL/files/gen/DDLParser.java
// $ANTLR 3.0.1 /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3 2012-02-03 12:35:55

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class DDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LOG_CONJ", "ID", "CVALUE", "NUMBER", "COMPARATOR", "EXACTO", "APROXIMADO", "CHARACTERS", "BITS", "TIMES", "INTERVALS", "BINARIES", "SQUOTE", "WS", "ML_COMMENT", "OL_COMMENT", "'CREATE'", "'REPLACE'", "'TABLE'", "'('", "','", "')'", "'LOGGING'", "'NOCOMPRESS'", "'NOCACHE'", "'NOPARALLEL'", "'MONITORING'", "';'", "'COMMENT ON TABLE'", "'IS'", "'BYTE'", "'CONSTRAINT'", "'NULL'", "'NOT NULL'", "'DEFAULT'", "'COMMENT ON COLUMN'", "'\\.'", "'ALTER TABLE'", "'DROP CONSTRAINT'", "'ADD'", "'CHECK'", "'FOREIGN KEY'", "'REFERENCES'", "'ON'", "'DELETE'", "'UPDATE'", "'CASCADE'", "'DISABLE'", "'PRIMARY KEY'", "'DATABASE'", "'SCHEMA'", "'IF NOT EXISTS'", "'CHARACTER'", "'SET'", "'COLLATE'", "'IN'"
    };
    public static final int BITS=12;
    public static final int APROXIMADO=10;
    public static final int NUMBER=7;
    public static final int OL_COMMENT=19;
    public static final int LOG_CONJ=4;
    public static final int SQUOTE=16;
    public static final int ID=5;
    public static final int EOF=-1;
    public static final int CVALUE=6;
    public static final int CHARACTERS=11;
    public static final int ML_COMMENT=18;
    public static final int INTERVALS=14;
    public static final int COMPARATOR=8;
    public static final int WS=17;
    public static final int BINARIES=15;
    public static final int TIMES=13;
    public static final int EXACTO=9;

        public DDLParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[88+1];
         }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("DDLParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3"; }


    public static class data_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start data_definition
    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:18:1: data_definition returns [Node returnNode] : (data_definition_statementGen+= data_definition_statement )* ;
    public final data_definition_return data_definition() throws RecognitionException {
        data_definition_return retval = new data_definition_return();
        retval.start = input.LT(1);

        List list_data_definition_statementGen=null;
        RuleReturnScope data_definition_statementGen = null;
        try {
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:19:1: ( (data_definition_statementGen+= data_definition_statement )* )
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:19:4: (data_definition_statementGen+= data_definition_statement )*
            {
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:19:4: (data_definition_statementGen+= data_definition_statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==20||LA1_0==32||LA1_0==39||LA1_0==41) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:19:5: data_definition_statementGen+= data_definition_statement
            	    {
            	    pushFollow(FOLLOW_data_definition_statement_in_data_definition48);
            	    data_definition_statementGen=data_definition_statement();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_data_definition_statementGen==null) list_data_definition_statementGen=new ArrayList();
            	    list_data_definition_statementGen.add(data_definition_statementGen);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            if ( backtracking==0 ) {
              
              		// Create return CST Node
              		Node data_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		data_definitionReturnNode.setKind("data_definition");
              	    // Create a CST Node
              		if(list_data_definition_statementGen != null) {
              	        for(Iterator it = list_data_definition_statementGen.iterator(); it.hasNext(); )  { 
              	            DDLParser.data_definition_statement_return r = (DDLParser.data_definition_statement_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("data_definition_statement");
              	            	data_definitionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = data_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end data_definition

    public static class data_definition_statement_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start data_definition_statement
    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );
    public final data_definition_statement_return data_definition_statement() throws RecognitionException {
        data_definition_statement_return retval = new data_definition_statement_return();
        retval.start = input.LT(1);

        List list_databaseGen=null;
        List list_tableGen=null;
        List list_comment_tableGen=null;
        List list_comment_columnGen=null;
        List list_disabled_constraintGen=null;
        List list_added_constraint_ckGen=null;
        List list_added_constraint_fkGen=null;
        RuleReturnScope databaseGen = null;
        RuleReturnScope tableGen = null;
        RuleReturnScope comment_tableGen = null;
        RuleReturnScope comment_columnGen = null;
        RuleReturnScope disabled_constraintGen = null;
        RuleReturnScope added_constraint_ckGen = null;
        RuleReturnScope added_constraint_fkGen = null;
        try {
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:40:1: (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk )
            int alt2=7;
            switch ( input.LA(1) ) {
            case 20:
                {
                int LA2_1 = input.LA(2);

                if ( ((LA2_1>=53 && LA2_1<=54)) ) {
                    alt2=1;
                }
                else if ( (LA2_1==LOG_CONJ||LA2_1==22) ) {
                    alt2=2;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 1, input);

                    throw nvae;
                }
                }
                break;
            case 32:
                {
                alt2=3;
                }
                break;
            case 39:
                {
                alt2=4;
                }
                break;
            case 41:
                {
                int LA2_4 = input.LA(2);

                if ( (LA2_4==ID) ) {
                    int LA2_7 = input.LA(3);

                    if ( (LA2_7==42) ) {
                        alt2=5;
                    }
                    else if ( (LA2_7==43) ) {
                        int LA2_9 = input.LA(4);

                        if ( (LA2_9==35) ) {
                            int LA2_10 = input.LA(5);

                            if ( (LA2_10==ID) ) {
                                int LA2_11 = input.LA(6);

                                if ( (LA2_11==45) ) {
                                    alt2=7;
                                }
                                else if ( (LA2_11==44) ) {
                                    alt2=6;
                                }
                                else {
                                    if (backtracking>0) {failed=true; return retval;}
                                    NoViableAltException nvae =
                                        new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 11, input);

                                    throw nvae;
                                }
                            }
                            else {
                                if (backtracking>0) {failed=true; return retval;}
                                NoViableAltException nvae =
                                    new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 10, input);

                                throw nvae;
                            }
                        }
                        else {
                            if (backtracking>0) {failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 9, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (backtracking>0) {failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 7, input);

                        throw nvae;
                    }
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 4, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("39:1: data_definition_statement returns [Node returnNode] : (databaseGen+= database | tableGen+= table | comment_tableGen+= comment_table | comment_columnGen+= comment_column | disabled_constraintGen+= disabled_constraint | added_constraint_ckGen+= added_constraint_ck | added_constraint_fkGen+= added_constraint_fk );", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:40:4: databaseGen+= database
                    {
                    pushFollow(FOLLOW_database_in_data_definition_statement73);
                    databaseGen=database();
                    _fsp--;
                    if (failed) return retval;
                    if (list_databaseGen==null) list_databaseGen=new ArrayList();
                    list_databaseGen.add(databaseGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_databaseGen != null) {
                      	        for(Iterator it = list_databaseGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.database_return r = (DDLParser.database_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("database");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 2 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:58:4: tableGen+= table
                    {
                    pushFollow(FOLLOW_table_in_data_definition_statement84);
                    tableGen=table();
                    _fsp--;
                    if (failed) return retval;
                    if (list_tableGen==null) list_tableGen=new ArrayList();
                    list_tableGen.add(tableGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_tableGen != null) {
                      	        for(Iterator it = list_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.table_return r = (DDLParser.table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 3 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:76:4: comment_tableGen+= comment_table
                    {
                    pushFollow(FOLLOW_comment_table_in_data_definition_statement95);
                    comment_tableGen=comment_table();
                    _fsp--;
                    if (failed) return retval;
                    if (list_comment_tableGen==null) list_comment_tableGen=new ArrayList();
                    list_comment_tableGen.add(comment_tableGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_comment_tableGen != null) {
                      	        for(Iterator it = list_comment_tableGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.comment_table_return r = (DDLParser.comment_table_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("comment_table");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 4 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:94:4: comment_columnGen+= comment_column
                    {
                    pushFollow(FOLLOW_comment_column_in_data_definition_statement106);
                    comment_columnGen=comment_column();
                    _fsp--;
                    if (failed) return retval;
                    if (list_comment_columnGen==null) list_comment_columnGen=new ArrayList();
                    list_comment_columnGen.add(comment_columnGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_comment_columnGen != null) {
                      	        for(Iterator it = list_comment_columnGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.comment_column_return r = (DDLParser.comment_column_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("comment_column");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 5 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:112:4: disabled_constraintGen+= disabled_constraint
                    {
                    pushFollow(FOLLOW_disabled_constraint_in_data_definition_statement117);
                    disabled_constraintGen=disabled_constraint();
                    _fsp--;
                    if (failed) return retval;
                    if (list_disabled_constraintGen==null) list_disabled_constraintGen=new ArrayList();
                    list_disabled_constraintGen.add(disabled_constraintGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_disabled_constraintGen != null) {
                      	        for(Iterator it = list_disabled_constraintGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.disabled_constraint_return r = (DDLParser.disabled_constraint_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("disabled_constraint");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 6 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:130:4: added_constraint_ckGen+= added_constraint_ck
                    {
                    pushFollow(FOLLOW_added_constraint_ck_in_data_definition_statement128);
                    added_constraint_ckGen=added_constraint_ck();
                    _fsp--;
                    if (failed) return retval;
                    if (list_added_constraint_ckGen==null) list_added_constraint_ckGen=new ArrayList();
                    list_added_constraint_ckGen.add(added_constraint_ckGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_added_constraint_ckGen != null) {
                      	        for(Iterator it = list_added_constraint_ckGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.added_constraint_ck_return r = (DDLParser.added_constraint_ck_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("added_constraint_ck");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;
                case 7 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:148:4: added_constraint_fkGen+= added_constraint_fk
                    {
                    pushFollow(FOLLOW_added_constraint_fk_in_data_definition_statement139);
                    added_constraint_fkGen=added_constraint_fk();
                    _fsp--;
                    if (failed) return retval;
                    if (list_added_constraint_fkGen==null) list_added_constraint_fkGen=new ArrayList();
                    list_added_constraint_fkGen.add(added_constraint_fkGen);

                    if ( backtracking==0 ) {
                      
                      		// Create return CST Node
                      		Node data_definition_statementReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		data_definition_statementReturnNode.setKind("data_definition_statement");
                      	    // Create a CST Node
                      		if(list_added_constraint_fkGen != null) {
                      	        for(Iterator it = list_added_constraint_fkGen.iterator(); it.hasNext(); )  { 
                      	            DDLParser.added_constraint_fk_return r = (DDLParser.added_constraint_fk_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("added_constraint_fk");
                      	            	data_definition_statementReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = data_definition_statementReturnNode;
                      	
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end data_definition_statement

    public static class table_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start table
    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:168:1: table returns [Node returnNode] : TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (ckGen+= ck (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (fkGen+= fk (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';' ;
    public final table_return table() throws RecognitionException {
        table_return retval = new table_return();
        retval.start = input.LT(1);

        Token TK_0=null;
        Token LOG_CONJGen=null;
        Token TK_1=null;
        Token TK_2=null;
        Token IDGen=null;
        Token TK_3=null;
        Token TK_4=null;
        Token TK_5=null;
        Token TK_6=null;
        Token TK_7=null;
        Token TK_8=null;
        Token TK_9=null;
        Token TK_10=null;
        Token TK_11=null;
        Token TK_12=null;
        Token TK_13=null;
        Token TK_14=null;
        List list_columnGen=null;
        List list_ckGen=null;
        List list_pkGen=null;
        List list_fkGen=null;
        RuleReturnScope columnGen = null;
        RuleReturnScope ckGen = null;
        RuleReturnScope pkGen = null;
        RuleReturnScope fkGen = null;
        try {
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:1: (TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (ckGen+= ck (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (fkGen+= fk (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';' )
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:3: TK_0= 'CREATE' (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )? TK_2= 'TABLE' IDGen= ID TK_3= '(' (columnGen+= column )* (TK_4= ',' )? (ckGen+= ck (TK_5= ',' )? )* (pkGen+= pk )? (TK_6= ',' )? (fkGen+= fk (TK_7= ',' )? )* TK_8= ')' (TK_9= 'LOGGING' )? (TK_10= 'NOCOMPRESS' )? (TK_11= 'NOCACHE' )? (TK_12= 'NOPARALLEL' )? (TK_13= 'MONITORING' )? TK_14= ';'
            {
            TK_0=(Token)input.LT(1);
            match(input,20,FOLLOW_20_in_table161); if (failed) return retval;
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:17: (LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE' )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==LOG_CONJ) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:18: LOG_CONJGen= LOG_CONJ TK_1= 'REPLACE'
                    {
                    LOG_CONJGen=(Token)input.LT(1);
                    match(input,LOG_CONJ,FOLLOW_LOG_CONJ_in_table166); if (failed) return retval;
                    TK_1=(Token)input.LT(1);
                    match(input,21,FOLLOW_21_in_table170); if (failed) return retval;

                    }
                    break;

            }

            TK_2=(Token)input.LT(1);
            match(input,22,FOLLOW_22_in_table176); if (failed) return retval;
            IDGen=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_table180); if (failed) return retval;
            TK_3=(Token)input.LT(1);
            match(input,23,FOLLOW_23_in_table184); if (failed) return retval;
            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:87: (columnGen+= column )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:88: columnGen+= column
            	    {
            	    pushFollow(FOLLOW_column_in_table189);
            	    columnGen=column();
            	    _fsp--;
            	    if (failed) return retval;
            	    if (list_columnGen==null) list_columnGen=new ArrayList();
            	    list_columnGen.add(columnGen);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:108: (TK_4= ',' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==24) ) {
                int LA5_1 = input.LA(2);

                if ( (synpred10()) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:109: TK_4= ','
                    {
                    TK_4=(Token)input.LT(1);
                    match(input,24,FOLLOW_24_in_table196); if (failed) return retval;

                    }
                    break;

            }

            // /Users/fjavier/UMU/Tesis/workspace/M_F1_DDL/files/gen/DDL.ge3:169:120: (ckGen+= ck (TK_5= ',' )? )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);
